[gd_scene load_steps=3 format=3 uid="uid://bwfxfias4t1cl"]

[ext_resource type="Script" path="res://main.gd" id="1_oou13"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgker"]
size = Vector2(10, 266)

[node name="main" type="Node2D"]
script = ExtResource("1_oou13")

[node name="background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="wall" type="StaticBody2D" parent="." groups=["v"]]
position = Vector2(256, 0)
collision_layer = 4
collision_mask = 0

[node name="ColorRect" type="ColorRect" parent="wall"]
offset_right = 10.0
offset_bottom = 266.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall2" type="StaticBody2D" parent="." groups=["v"]]
position = Vector2(535, 0)
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall2"]
offset_right = 10.0
offset_bottom = 266.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall3" type="StaticBody2D" parent="." groups=["h"]]
position = Vector2(266, 266)
rotation = 1.5708
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall3"]
offset_right = 10.0
offset_bottom = 266.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall3"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall4" type="StaticBody2D" parent="." groups=["h"]]
position = Vector2(801, 266)
rotation = 1.5708
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall4"]
offset_right = 10.0
offset_bottom = 266.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall4"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall5" type="StaticBody2D" parent="." groups=["h"]]
position = Vector2(801, 524)
rotation = 1.5708
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall5"]
offset_right = 10.0
offset_bottom = 266.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall5"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall6" type="StaticBody2D" parent="." groups=["v"]]
position = Vector2(257, 534)
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall6"]
offset_right = 10.0
offset_bottom = 266.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall6"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall7" type="StaticBody2D" parent="." groups=["v"]]
position = Vector2(535, 534)
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall7"]
offset_right = 10.0
offset_bottom = 266.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall7"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="wall8" type="StaticBody2D" parent="." groups=["h"]]
position = Vector2(267, 524)
rotation = 1.5708
collision_layer = 4

[node name="ColorRect" type="ColorRect" parent="wall8"]
offset_right = 10.0
offset_bottom = 266.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall8"]
position = Vector2(5, 133)
shape = SubResource("RectangleShape2D_wgker")

[node name="spawn1" type="Node2D" parent="."]
position = Vector2(403, 768)

[node name="spawn2" type="Node2D" parent="."]
position = Vector2(401, 31)

[node name="spawn3" type="Node2D" parent="."]
position = Vector2(34, 400)

[node name="spawn4" type="Node2D" parent="."]
position = Vector2(761, 400)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 325.0
offset_top = 333.0
offset_right = 365.0
offset_bottom = 373.0

[node name="Host" type="Button" parent="Menu"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 31.0
text = "Host"

[node name="Join" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 57.0
offset_right = 101.0
offset_bottom = 31.0
text = "Join"

[node name="Start" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 110.0
offset_right = 156.0
offset_bottom = 31.0
text = "Start"

[node name="test" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 183.0
offset_right = 229.0
offset_bottom = 31.0
text = "test"

[node name="Address" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_top = 37.0
offset_right = 155.0
offset_bottom = 68.0
text = "localhost"
placeholder_text = "IP Address"

[node name="Name" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_top = 73.0
offset_right = 155.0
offset_bottom = 104.0
placeholder_text = "Name"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/test" to="." method="_on_test_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
